--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "openai>=2.16.0",
     "pillow>=12.1.0",
     "pydantic-settings>=2.12.0",
+    "python-multipart>=0.0.22",
     "uvicorn>=0.40.0",
 ]
