--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "langchain>=1.2.8",
     "langchain-openai>=1.1.7",
+    "langgraph>=1.0.7",
     "openai>=2.16.0",
     "pillow>=12.1.0",
     "pydantic-settings>=2.12.0",
