--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain>=1.2.8",
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
+    "litellm>=1.81.10",
     "openai>=2.16.0",
     "pillow>=12.1.0",
     "pydantic-settings>=2.12.0",
