--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,11 @@ services:
     build: .
     image: interier_gen:latest
     env_file: .env
+    ports: 
+      - 6000:6000
     environment:
-      - HOST=localhost
-      - PORT=5000
+      - HOST=0.0.0.0
+      - PORT=6000
     volumes:
       - ./jobs:/app/jobs
     restart: no
